tabel eingebaut und filtern mit vorhanden

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>Hi, Andi!</h1>
+    <h1>Hi, Andi!</h1><BR>
+    {% include 'filterItem.html' %}
+    {{ tabel }}
 {% endblock %}
