--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>Hi, Andi!</h1><BR>
     {% include 'filterItem.html' %}
-    {{ tabel }}
-{% endblock %}
+    {{ tabel }}1
+{% endblock %}1
